Fix leftNav layout bug and minor issues

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+/* this disables dev mode error overlay for the presentation*/
+nextjs-portal {
+  display: none;
+}
+
 html,
 body {
   height: 100%;
